teste de modificações no main

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>     </head> 
     <body> 
 	        <h1>GitHub</h1>
-		<p>Teste de ramo no backend!</p>
+		<p>Teste se as modificações só ocorrem no ramo "main"</p>
     </body> 
 </html> 
