teste no ramo backend

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>     </head> 
     <body> 
 	        <h1>GitHub</h1>
-		<p>Teste de modificação no ramo "backend"!</p>
+		<p>Teste de modificação no ramo "backend"</p>
     </body> 
 </html> 
